--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "date-fns": "^2.28.0",
     "dotenv": "^14.3.2",
     "dotenv-cli": "^4.1.1",
     "ejs": "^3.1.6",
